<resources>
    <string name="app_name">SR_Courier</string>
    <string name="courier_provider">Courier Provider</string>
    <string name="sender_name">Sender Name</string>
    <string name="send">Send</string>
    <string name="consignment_number">Consignment Number</string>
    <string name="destination">Destination</string>
    <string name="select_receiver_contact">Select Receiver Contact</string>
    <string name="sender_mobile_number">Sender Mobile Number</string>
    <string name="receiver_mobile_number">Receiver Mobile Number</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="select_sender_contact">Select Sender Contact</string>
</resources>