<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              tools:context=".ui.MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/courier_provider"
                app:helperText="* Required">

                <AutoCompleteTextView
                        android:id="@+id/spnCourierProvider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSender"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/sender_name"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="* Required"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtSender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtSenderMobile"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/sender_mobile_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:helperText="* Required"
                    app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtSenderMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectSenderContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_sender_contact"
                    android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtReceiver"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/receiver_name"
                    app:counterEnabled="true"
                    app:endIconMode="clear_text"
                    app:helperText="* Required"
                    app:startIconDrawable="@drawable/ic_person_2">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtReceiver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtReceiverMobile"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/receiver_mobile_number"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:endIconMode="clear_text"
                    app:helperText="* Required"
                    app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtReceiverMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/selectReceiverContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_receiver_contact"
                    android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLocation"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/destination"
                    app:counterEnabled="true"
                    app:endIconMode="clear_text"
                    app:helperText="* Required"
                    app:startIconDrawable="@drawable/ic_location">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtConsignment"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/consignment_number"
                    app:counterEnabled="true"
                    app:endIconMode="clear_text"
                    app:helperText="* Optional"
                    app:startIconDrawable="@drawable/ic_id">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTxtConsignment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTakePicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Take Picture"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_camera"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"/>


            <Button
                    android:id="@+id/btnSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/send"
                    android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>